# Mini-Robot-Simulation

./: CMakeLists.txt  README.md  force_calculator.cpp  force_calculator.h  main.cpp  motor.cpp  motor.h  motor_plot.py  params.h  robot.cpp  robot.h  robot_double_plot.py  robot_single_motor_plot.py  simulation.cpp  simulation.h
